<?xml version="1.0" encoding="utf-8"?>
<com.campus.prime.ui.view.DetectRelativeLayout 
    
    android:background="@drawable/sel_layout_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
      	<LinearLayout                    
            android:gravity = "center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/form_horizontal_padding"
            android:paddingRight="@dimen/form_horizontal_padding"
            android:paddingTop="@dimen/form_vertical_padding"
            android:paddingBottom="@dimen/form_vertical_padding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"         
            >
           <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <com.campus.prime.ui.view.ThemeImageView
                    android:id="@+id/edit_user_avactar"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"                 
                    android:background="@drawable/ic_avactar"
                    />
				<com.campus.prime.ui.view.ThemeTextView
				    android:id="@+id/edit_user_avactar_prompt"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_toRightOf="@id/edit_user_avactar"
				    android:layout_marginTop="3.0dip"
                    android:layout_marginLeft="10.0dip"
				    android:text="点击头像进行编辑"
				    />
            
        
     		 </RelativeLayout>
      	    <com.campus.prime.ui.view.Header
	            android:paddingLeft="8.0dip"
	            android:paddingRight="12.0dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4.0dip"
	            android:layout_marginRight="4.0dip"
	            android:text="@string/general_label"
	            android:textSize="20.0dip"
	            style="@style/Header"
	            />
      	    
      	    <com.campus.prime.ui.view.LabelTextView
                android:id="@+id/edit_user_realname"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="小七"
            	style="@style/label_text1"
                />
      	    <com.campus.prime.ui.view.LabelTextView 
                android:id="@+id/edit_user_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/user_email"
            	style="@style/label_text1"
                />
      	     	    
      	    <com.campus.prime.ui.view.Header
	            android:paddingLeft="8.0dip"
	            android:paddingRight="12.0dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4.0dip"
	            android:layout_marginRight="4.0dip"
	            android:text="@string/personal_label"
	            android:textSize="20.0dip"
	            style="@style/Header"
	            />
      	    <com.campus.prime.ui.view.LabelEditText
				    android:id="@+id/edit_user_nickname"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:hint="添加昵称"
				    style="@style/TextField"
				    />
      	    <com.campus.prime.ui.view.LabelTextView
                android:id="@+id/edit_user_love"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="添加状态"
                android:clickable="true"
            	style="@style/label_text1"
                />
      	    
      	    <com.campus.prime.ui.view.LabelEditText 
                android:id="@+id/edit_user_description"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:gravity="top|left"
                android:hint="@string/user_description"
            	style="@style/TextField"
                />
      	    <com.campus.prime.ui.view.Header
	            android:paddingLeft="8.0dip"
	            android:paddingRight="12.0dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4.0dip"
	            android:layout_marginRight="4.0dip"
	            android:text="@string/education_label"
	            android:textSize="20.0dip"
	            style="@style/Header"
	            />
      	    
      	    <com.campus.prime.ui.view.LabelTextView 
      	        android:id="@+id/edit_user_school"
      	        android:layout_width="fill_parent"
      	        android:layout_height="wrap_content" 	        
      	        android:hint="School"
      	        android:clickable="true"
      	        style="@style/label_text1"/>
      	    
      	    <com.campus.prime.ui.view.LabelTextView 
      	        android:id="@+id/edit_user_academy"
      	        android:layout_width="fill_parent"
      	        android:layout_height="wrap_content"
      	        android:hint="Academy"
      	        android:clickable="true"
      	        style="@style/label_text1"
      	        />
      	    
      	    <com.campus.prime.ui.view.LabelTextView
      	        android:id="@+id/edit_user_grade"
      	        android:layout_width="fill_parent"
      	        android:layout_height="wrap_content"
      	        android:hint="Grade"
      	        android:clickable="true"
      	        style="@style/label_text1"
      	        />
            </LinearLayout>
    </ScrollView>
    
    
</com.campus.prime.ui.view.DetectRelativeLayout>

